<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:src="@drawable/ic_girl" />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="@color/text_black_54"
        android:textSize="20sp"
        android:text="@string/about_version" />
    
    <TextView
        android:id="@+id/contactText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/copyrightText"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="8dp"
        android:text="@string/about_contact" />

    <TextView
        android:id="@+id/copyrightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:textColor="@color/text_black_54"
        android:text="@string/about_copyright" />

</RelativeLayout>