<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="32dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/heartRateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.6"
                android:gravity="bottom|right"
                android:text="@string/normal_text_number"
                android:textColor="@color/text_black_87"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/textview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/normal_text_unit"
                android:textColor="@color/text_black_87"
                android:textSize="20sp" />
        </LinearLayout>

        <com.uestc.hb.ecg.NormalECGSurfaceView
            android:id="@+id/surfaceview1"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:layout_marginTop="8dp"
            android:background="#00eeeeee" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/selector_button_second"
            android:text="@string/normal_button_disconnect"
            android:textColor="@color/text_black_87" />
    </LinearLayout>

</ScrollView>